# MiniTar

./: CMakeLists.txt  Config.cmake.in  Makefile  README.md
src/: CMakeLists.txt  minitar.cpp  minitar.hpp
